# theory_of_parallelism

./: .gitignore  README.md
1/: CMakeLists.txt  README.md  main.cpp
2/: README.md
2/2.2/: CMakeLists.txt  integral.cpp  mult.cpp
2/2.3/: sle.cpp
3/3.1/: main.cpp
3/3.2/: main.cpp
4/: classes.py  main.py
